Add support to use unix timestamps in online quote urls

Unix timestamps are supported by using '%unix' or '%25unix'

BUG:486360
FIXED-IN:8.2